[4.2] Invariant failure isVersionInitialized() src/mongo/db/server_options.h 217 after index build completes

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Execution Team 2021-05-31, Execution Team 2021-06-14, Execution Team 2021-06-28, Execution Team 2021-07-12, Execution Team 2021-08-09
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Observed on 4.2.12. I'm not sure if affects other versions.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Kelsey Schubert
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: