SERVER-55319 ensure FCV is initialized and set to 4.2 before dropping RSTL for index build