src/mongo/db/index_builds_coordinator.cpp
@@ -786,8 +786,9 @@ void IndexBuildsCoordinator::_runIndexBuildInner(OperationContext* opCtx,
             // waiting to acquire the RSTL in mode X.
             // We should only drop the RSTL while in FCV 4.2, as prepared transactions can only
             // occur in FCV 4.2.
-            if (serverGlobalParams.featureCompatibility.getVersion() ==
-                ServerGlobalParams::FeatureCompatibility::Version::kFullyUpgradedTo42) {
+            if (serverGlobalParams.featureCompatibility.isVersionInitialized() &&
+                serverGlobalParams.featureCompatibility.getVersion() ==
+                    ServerGlobalParams::FeatureCompatibility::Version::kFullyUpgradedTo42) {
                 const bool unlocked = opCtx->lockState()->unlockRSTLforPrepare();
                 invariant(unlocked);
             }
